# stm32-agent

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
examples/: basic_demo.py
stm32_agent/: __init__.py  cli.py  core.py  guides.py  knowledge_base.py
stm32_agent/skills/: __init__.py  adc.py  can.py  dac.py  dma.py  encoder.py  exti.py  flash_eeprom.py  gpio.py  i2c.py  iap.py  oled.py  pwm.py  pwr.py  rng_crc.py  rtc.py  sdio.py  spi.py  tim_basic.py  usart.py  usb.py  w25q64.py  wdg.py
stm32_agent/skills/engineering/: diagnose.md  grill-me.md
stm32_agent/skills/productivity/: caveman.md
